# apeout-platform

./: .gitignore  Anchor.toml  Cargo.toml  eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
contracts/: fee_rewards.rs  holder_distribution.rs  lp_custody_with_tracker.rs  project_status_tracker.rs
programs/apeout-swap/: Cargo.toml
programs/apeout-swap/src/: lib.rs
programs/category-tracker/: Cargo.toml
programs/category-tracker/src/: lib.rs
programs/daily-game-vault/: Cargo.toml
programs/daily-game-vault/src/: lib.rs
programs/fee-rewards/: Cargo.toml
programs/fee-rewards/src/: lib.rs
programs/holder-distribution/: Cargo.toml
programs/holder-distribution/src/: lib.rs
programs/lp-custody/: Cargo.toml
programs/lp-custody/src/: lib.rs
programs/project-status-tracker/: Cargo.toml
programs/project-status-tracker/src/: lib.rs
programs/token-launcher/: Cargo.toml
programs/token-launcher/src/: lib.rs
src/: App.tsx  App.tsx.backup  LaunchToken.tsx  TokenChart.tsx  main.tsx  styles.css  token_metadata.ts
src/anchor/: pdas.ts  programs.ts
src/components/: AnchorTest.tsx  ApeoutStakingDashboard.tsx  ClaimLPRewards.tsx  DailyApeOutAwards.tsx  DoomCountdown.tsx  EnhancedFeeRewards.tsx  EnhancedLPClaim.tsx  EnhancedProjectStatus.tsx  EnhancedStakingDashboard.tsx  FeeRewardClaim.tsx  LiveLaunchFeed.tsx  ProjectStatusDashboard.tsx  SwapInterface.tsx  TokenDetailPage.tsx  TokenDiscovery.tsx  TokenLaunch.tsx  TrendingTicker.tsx  TrendingTokenLeaderboard.tsx  WalletConnectHeader.tsx  index.ts
src/context/: AppContext.tsx  index.ts
src/hooks/: useApeOutClient.ts  useFeeRewards.ts  useTokenTracker.ts
src/idl/: apeout_swap.json  category_tracker.json  daily_game_vault.json  fee_rewards.json  holder_distribution.json  lp_custody.json  project_status_tracker.json  token_launcher.json
src/lib/anchor/: client.ts
src/services/: SwapService.ts  dailyGameService.ts  dailyRewardsService.ts  index.ts  lpClaimService.ts  stakingService.ts  tokenLauncherService.ts
src/tests/: debugPrograms.ts
src/types/: anchor.ts  index.ts
src/utils/: anchor.ts  constants.ts  index.ts
