[workspace]
members = [
    "programs/fee-rewards",
    "programs/holder-distribution",
    "programs/lp-custody", 
    "programs/project-status-tracker"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1