[package]
name = "apeout-swap"
version = "0.1.0"
description = "Internal DEX for ApeOut platform with immediate LP creation"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "apeout_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["derive"] }
anchor-spl = { version = "0.28.0", features = ["default"] }

[dev-dependencies]
anchor-client = "0.28.0"
solana-sdk = "~1.16.0"