[package]
name = "token-launcher"
version = "0.1.0"
description = "Token launcher with immediate LP creation and custody integration"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_launcher"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["derive"] }
anchor-spl = { version = "0.28.0", features = ["default"] }
project-status-tracker = { path = "../project-status-tracker", features = ["cpi"] }
lp-custody = { path = "../lp-custody", features = ["cpi"] }
apeout-swap = { path = "../apeout-swap", features = ["cpi"] }

[dev-dependencies]
anchor-client = "0.28.0"
solana-sdk = "~1.16.0"
